# beagle_runtime_api

./: .gitignore  README.md  pyproject.toml  setup.py
beagle_driver/script/: restart_dma
beagle_runtime_api/: __init__.py  compiler_model.py  darwin3_device.py  darwin3_device_api.py  darwin3_device_func.py  deprecated.py  dma_direction.py  flit_type.py  monkey_patch.py  tcp_transmitter.py
beagle_runtime_api/advanced_ir/: LSLS_params.py  RREG.py  __init__.py  if_else.py  label.py  preprocess.py  pseudo_inst.py
beagle_runtime_api/beagle_runtime_api/: darwin3_device.py  dwnc.py  gen_flit.py
beagle_runtime_api/beagle_runtime_api/parser/: parse_flit.py
beagle_runtime_api/darwin_flit/: command_list.py  constant.py  decode.py  encode.py  misc.py  nc_pkgb.py  result.py
beagle_runtime_api/runtime/: compiler_model.py  darwin3_device.py  dwnc.py  gen_flit.py  misc.py  tcp_transmitter.py
beagle_runtime_api/runtime/darwin_flit/: constant.py  decode.py  encode.py  flit.py  misc.py  nc_pkgb.py  parse_config.py  parse_spike.py  result.py
beagle_runtime_api/runtime/flit/: flit_constant.py  flit_gen_status.py  gen_flit.py  gen_flit_by_dwnc.py  gen_flit_fast.py
beagle_runtime_api/runtime/parser/: decoder.py  parse_flit.py  result_base.py  results.py
beagle_runtime_api/runtime_api/: darwin3_device.py  tcp_transmitter.py
beagle_runtime_api/server/: board_server.py
beagle_runtime_api/transmitter/: __init__.py  tcp_transmitter.py  transmitter_base.py
script/: beagle_runtime_server  lamarck_runtime_server.py
